# notismart-api

./: .gitignore  Cargo.toml  smtp_test.py
migrations/: 0002_add_password_hash_to_users.sql  0003_set_user_created_at_not_null.sql  0004_add_email_verification.sql  0005_add_phone_verification.sql  001_init.sql
src/: config.rs  main.rs  swagger.rs
src/api/: mod.rs  notification.rs  user.rs
src/auth/: extractor.rs
src/db/: mod.rs  models.rs
src/services/: mod.rs  notification.rs
