[package]
name = "notismart-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.87"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }
actix-rt = "2.10.0"
dotenv = "0.15.0"
